--- a/app.json
+++ b/app.json
@@ -5,10 +5,27 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarBackgroundColor": "#fb773e",
+    "navigationBarTitleText": "一人本地生活",
+    "navigationBarTextStyle":"white"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "tabBar": {
+    "backgroundColor": "#ffffff",
+    "color": "#000000",
+    "selectedColor": "#fb773e",
+    "list": [
+      { "text": "首页",
+        "pagePath": "pages/index/index",
+        "iconPath": "images/home.png",
+        "selectedIconPath": "images/home_HL.png"
+      },
+      { "text": "我的", 
+        "iconPath": "images/mine.png",
+        "selectedIconPath": "images/mine_HL.png",
+        "pagePath": "pages/logs/logs"
+      }
+    ]
+  }
 }
