--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "pages/detail/detail",
     "pages/search/search"
   ],
+  "entryPagePath": "pages/search/search",
   "usingComponents": {
     "goods-list": "/components/goods-list/index"
   },
